@@ -1,6 +1,5 @@
 package wehavecookies56.bonfires;
 
-
 import com.mojang.authlib.GameProfile;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
@@ -9,42 +8,46 @@ import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.suggestion.SuggestionProvider;
-import net.minecraft.command.CommandSource;
-import net.minecraft.command.Commands;
-import net.minecraft.command.ISuggestionProvider;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.commands.Commands;
+import net.minecraft.commands.SharedSuggestionProvider;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Registry;
+import net.minecraft.network.chat.ClickEvent;
+import net.minecraft.network.chat.HoverEvent;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.MinecraftServer;
-import net.minecraft.util.RegistryKey;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.registry.Registry;
-import net.minecraft.util.text.*;
-import net.minecraft.util.text.event.ClickEvent;
-import net.minecraft.util.text.event.HoverEvent;
-import net.minecraft.world.World;
-import net.minecraftforge.fml.server.ServerLifecycleHooks;
+import net.minecraft.world.level.Level;
+import net.minecraftforge.server.ServerLifecycleHooks;
 import wehavecookies56.bonfires.bonfire.Bonfire;
 import wehavecookies56.bonfires.data.BonfireHandler;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.UUID;
 
 /**
  * Created by Toby on 17/12/2016.
  */
 public class BonfiresCommand {
 
-    public static SuggestionProvider<CommandSource> SUGGEST_DIMENSIONS = (context, builder) -> {
-        List<String> list = ServerLifecycleHooks.getCurrentServer().levelKeys().stream().map(rk -> rk.location().toString()).collect(Collectors.toList());
-        return ISuggestionProvider.suggest(list.stream().map(StringArgumentType::escapeIfRequired), builder);
+    public static SuggestionProvider<CommandSourceStack> SUGGEST_DIMENSIONS = (context, builder) -> {
+        List<String> list = ServerLifecycleHooks.getCurrentServer().levelKeys().stream().map(rk -> rk.location().toString()).toList();
+        return SharedSuggestionProvider.suggest(list.stream().map(StringArgumentType::escapeIfRequired), builder);
     };
 
-    public static SuggestionProvider<CommandSource> SUGGEST_USERNAMES = (context, builder) -> {
+    public static SuggestionProvider<CommandSourceStack> SUGGEST_USERNAMES = (context, builder) -> {
         Collection<String> list = context.getSource().getOnlinePlayerNames();
-        return ISuggestionProvider.suggest(list.stream().map(StringArgumentType::escapeIfRequired), builder);
+        return SharedSuggestionProvider.suggest(list.stream().map(StringArgumentType::escapeIfRequired), builder);
     };
 
-    public static void register(final CommandDispatcher<CommandSource> dispatcher) {
-        LiteralArgumentBuilder<CommandSource> builder = Commands.literal("bonfires").requires(commandSource -> commandSource.hasPermission(2));
+    public static void register(final CommandDispatcher<CommandSourceStack> dispatcher) {
+        LiteralArgumentBuilder<CommandSourceStack> builder = Commands.literal("bonfires").requires(commandSource -> commandSource.hasPermission(2));
 
         builder.then(Commands.literal("all").executes(context -> BonfiresCommand.executeCommand(context, "all")));
         builder.then(Commands.literal("dim").then(Commands.argument("dimension", StringArgumentType.string()).suggests(SUGGEST_DIMENSIONS).executes(context -> BonfiresCommand.executeCommand(context, "dim"))));
@@ -56,7 +59,7 @@ public class BonfiresCommand {
     }
 
 
-    private static int executeCommand(CommandContext<CommandSource> context, String filter) throws CommandSyntaxException {
+    private static int executeCommand(CommandContext<CommandSourceStack> context, String filter) throws CommandSyntaxException {
         List<Bonfire> query;
         String input;
         MinecraftServer server = ServerLifecycleHooks.getCurrentServer();
@@ -64,56 +67,56 @@ public class BonfiresCommand {
             case "all":
                 query = new ArrayList<>(BonfireHandler.getHandler(context.getSource().getLevel()).getRegistry().getBonfires().values());
                 if (query.isEmpty()) {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_NOMATCH, "all"), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_NOMATCH, "all"), false);
                 } else {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_MATCH, query.size(), "all"), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_MATCH, query.size(), "all"), false);
                     listQueriedBonfires(query, context.getSource());
                 }
                 break;
             case "dim":
                 input = StringArgumentType.getString(context, "dimension");
                 if (input.contains(":")) {
-                    RegistryKey<World> dimensionKey = RegistryKey.create(Registry.DIMENSION_REGISTRY, new ResourceLocation(input));
+                    ResourceKey<Level> dimensionKey = ResourceKey.create(Registry.DIMENSION_REGISTRY, new ResourceLocation(input));
                     if (ServerLifecycleHooks.getCurrentServer().levelKeys().contains(dimensionKey)) {
                         query = BonfireHandler.getHandler(context.getSource().getLevel()).getRegistry().getBonfiresByDimension(dimensionKey.location());
                         if (query.isEmpty()) {
-                            context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_DIM_NOMATCH, input), false);
+                            context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_DIM_NOMATCH, input), false);
                         } else {
-                            context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_DIM_MATCH, query.size(), input), false);
+                            context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_DIM_MATCH, query.size(), input), false);
                             listQueriedBonfires(query, context.getSource());
                         }
                     } else {
-                        context.getSource().sendFailure(new TranslationTextComponent(LocalStrings.COMMAND_DIM_NODIM, input));
+                        context.getSource().sendFailure(new TranslatableComponent(LocalStrings.COMMAND_DIM_NODIM, input));
                     }
                 } else {
-                    context.getSource().sendFailure(new TranslationTextComponent(LocalStrings.COMMAND_DIM_INVALID, input));
+                    context.getSource().sendFailure(new TranslatableComponent(LocalStrings.COMMAND_DIM_INVALID, input));
                 }
                 break;
             case "name":
                 input = StringArgumentType.getString(context, "bonfirename");
                 query = BonfireHandler.getHandler(context.getSource().getLevel()).getRegistry().getBonfiresByName(input);
                 if (query.isEmpty()) {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_NOMATCH, input), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_NOMATCH, input), false);
                 } else {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_MATCH, query.size(), input), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_MATCH, query.size(), input), false);
                     listQueriedBonfires(query, context.getSource());
                 }
                 break;
             case "owner":
                 input = StringArgumentType.getString(context, "ownername");
-                GameProfile ownerProfile = ServerLifecycleHooks.getCurrentServer().getProfileCache().get(input);
+                GameProfile ownerProfile = ServerLifecycleHooks.getCurrentServer().getProfileCache().get(input).orElse(null);
                 if (ownerProfile != null) {
                     UUID ownerID = ownerProfile.getId();
                     if (ownerID != null) {
                         query = BonfireHandler.getHandler(context.getSource().getLevel()).getRegistry().getBonfiresByOwner(ownerID);
                         if (query.isEmpty()) {
-                            context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_NOMATCH, input), false);
+                            context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_NOMATCH, input), false);
                         } else {
-                            context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_MATCH, query.size(), input), false);
+                            context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_MATCH, query.size(), input), false);
                             listQueriedBonfires(query, context.getSource());
                         }
                     } else {
-                        context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_NOUSER, input), false);
+                        context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_NOUSER, input), false);
                     }
                 }
                 break;
@@ -121,18 +124,18 @@ public class BonfiresCommand {
                 int radius = IntegerArgumentType.getInteger(context, "searchradius");
                 query = BonfireHandler.getHandler(context.getSource().getLevel()).getRegistry().getBonfiresInRadius(new BlockPos(context.getSource().getPosition()), radius, context.getSource().getLevel().dimension().location());
                 if (query.isEmpty()) {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_RADIUS_NOMATCH, radius), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_RADIUS_NOMATCH, radius), false);
                 } else {
-                    context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_RADIUS_MATCH, query.size(), radius), false);
+                    context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_RADIUS_MATCH, query.size(), radius), false);
                     listQueriedBonfires(query, context.getSource());
                 }
                 break;
             case "filters":
-                context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_ALL_DESC, "all"), false);
-                context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_DIM_DESC, "dim"), false);
-                context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_NAME_DESC, "name"), false);
-                context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_OWNER_DESC, "owner"), false);
-                context.getSource().sendSuccess(new TranslationTextComponent(LocalStrings.COMMAND_RADIUS_DESC, "radius"), false);
+                context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_ALL_DESC, "all"), false);
+                context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_DIM_DESC, "dim"), false);
+                context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_NAME_DESC, "name"), false);
+                context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_OWNER_DESC, "owner"), false);
+                context.getSource().sendSuccess(new TranslatableComponent(LocalStrings.COMMAND_RADIUS_DESC, "radius"), false);
                 break;
             default:
                 return 0;
@@ -140,28 +143,28 @@ public class BonfiresCommand {
         return 1;
     }
 
-    private static void listQueriedBonfires(List<Bonfire> query, CommandSource sender) {
+    private static void listQueriedBonfires(List<Bonfire> query, CommandSourceStack sender) {
         query.forEach((bonfires -> {
-            GameProfile owner = ServerLifecycleHooks.getCurrentServer().getProfileCache().get(bonfires.getOwner());
-            String name = new TranslationTextComponent(LocalStrings.COMMAND_NA).getString();
+            GameProfile owner = ServerLifecycleHooks.getCurrentServer().getProfileCache().get(bonfires.getOwner()).orElse(null);
+            String name = new TranslatableComponent(LocalStrings.COMMAND_NA).getString();
             if (owner != null) {
                 name = owner.getName();
             }
-            IFormattableTextComponent messageName = new TranslationTextComponent(LocalStrings.COMMAND_NAME, bonfires.getName()).withStyle(style -> {
-                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, bonfires.getName())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("chat.copy.click")));
+            MutableComponent messageName = new TranslatableComponent(LocalStrings.COMMAND_NAME, bonfires.getName()).withStyle(style -> {
+                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, bonfires.getName())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("chat.copy.click")));
             });
-            IFormattableTextComponent messageID = new TranslationTextComponent(LocalStrings.COMMAND_ID, bonfires.getId()).withStyle(style -> {
-                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, bonfires.getId().toString())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("chat.copy.click")));
+            MutableComponent messageID = new TranslatableComponent(LocalStrings.COMMAND_ID, bonfires.getId()).withStyle(style -> {
+                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, bonfires.getId().toString())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("chat.copy.click")));
             });
             String finalName = name;
-            IFormattableTextComponent messageOwner = new TranslationTextComponent(LocalStrings.COMMAND_OWNER, name).withStyle(style -> {
-                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, finalName)).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("chat.copy.click")));
+            MutableComponent messageOwner = new TranslatableComponent(LocalStrings.COMMAND_OWNER, name).withStyle(style -> {
+                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, finalName)).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("chat.copy.click")));
             });
-            IFormattableTextComponent messagePos = new TranslationTextComponent(LocalStrings.COMMAND_POS, bonfires.getPos().getX(), bonfires.getPos().getY(), bonfires.getPos().getZ()).withStyle(style -> {
-                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, "" + bonfires.getPos().getX() + " " + bonfires.getPos().getY() + " " + bonfires.getPos().getZ())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("chat.copy.click")));
+            MutableComponent messagePos = new TranslatableComponent(LocalStrings.COMMAND_POS, bonfires.getPos().getX(), bonfires.getPos().getY(), bonfires.getPos().getZ()).withStyle(style -> {
+                return style.withClickEvent(new ClickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, "" + bonfires.getPos().getX() + " " + bonfires.getPos().getY() + " " + bonfires.getPos().getZ())).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("chat.copy.click")));
             });
 
-            StringTextComponent space = new StringTextComponent(" ");
+            TextComponent space = new TextComponent(" ");
 
             sender.sendSuccess(messageName.append(space).append(messageID).append(space).append(messageOwner).append(space).append(messagePos), false);
         }));
